# QLSLIP_one_leg

./: CMakeLists.txt  MUJOCO_LOG.TXT  run
include/: controller.h  dataLogging.h  globVariable.h  kinematics.h  trajectory.h
matlab/: plot_chad.m  plot_data.m
model/mcl_oneleg/: mcl_oneleg.xml  scene.xml
src/: controller.cpp  kinematics.cpp  main.cpp  trajectory.cpp
